++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject (trunk)
=================

Features & Interface
--------------------

* In SQLite, id columns are made AUTOINCREMENT.

* Parameter ``backend`` in DB URI is no longer supported, use parameter
  ``driver``.

SQLObject 0.15.1
================

* A bugfix was ported from `SQLObject 0.14.2`_.

SQLObject 0.15.0
================

Released 6 Dec 2010.

Features & Interface
--------------------

* Major API change: all signals are sent with the instance (or the class)
  as the first parameter. The following signals were changed:
  RowCreateSignal, RowCreatedSignal, DeleteColumnSignal.

* Major API change: post-processing functions for all signals are called
  with the instance as the first parameter. The following signals were
  changed: RowUpdatedSignal, RowDestroySignal, RowDestroyedSignal.

SQLObject 0.14.2
================

* A minor bug was fixed in sqlbuilder.Union.

SQLObject 0.14.1
================

Released 15 Oct 2010.

* A bugfix was ported from `SQLObject 0.13.1`_.

SQLObject 0.14.0
================

Released 10 Oct 2010.

Features & Interface
--------------------

* The lists of columns/indices/joins are now sorted according to the order
  of declaration.

* ``validator2`` was added to all columns; it is inserted at the beginning
  of the list of validators, i.e. its ``from_python()`` method is called
  first, ``to_python()`` is called last, after all validators in the list.

* SQLiteConnection's parameter ``use_table_info`` became boolean with default
  value True; this means the default schema parser is now based on ``PRAGMA
  table_info()``.

* Major API change: attribute ``dirty`` was moved to sqlmeta.

SQLObject 0.13.1
================

Released 15 Oct 2010.

* A bug was fixed in a subtle case when a per-instance connection is not
  passed to validators.

SQLObject 0.13.0
================

Released 11 Aug 2010.

Features & Interface
--------------------
