@@ -1,0 +1,21 @@
+#!/usr/bin/env python
+
+import sys
+
+try:
+    uri = sys.argv[1]
+except IndexError:
+    sys.exit("Usage: %s old-style-URI" % sys.argv[0])
+
+try:
+    import pkg_resources
+    pkg_resources.require('SQLObject>=1.0.0a1')
+except (ImportError, pkg_resources.DistributionNotFound):
+    pass
+
+from sqlobject.dbconnection import dbConnectionForScheme
+
+scheme = uri.split(':')[0]
+connCls = dbConnectionForScheme(scheme)
+conn = connCls.connectionFromOldURI(uri)
+print conn.uri()
